fix mobile navigation toggle overlapping with links

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -17,7 +17,10 @@
 
 header div.container {
 	display: flex;
-	align-items: center;
+	
+	@media #{$mid-point} {
+		align-items: center;
+	}
 }
 
 nav {
@@ -41,6 +44,7 @@ nav {
 		border-bottom: 1px solid rgba(255,255,255,0);
 		color: rgba(255,255,255,.8);
 		transition: .2s ease-in-out;
+		max-width: 120px;
 		display: none;
 
 		@media #{$mid-point} {
